# texified.org

./: .gitignore  LICENSE  README.md  texified.cabal
pkg/: texified.org.spec  texified.service  texified.spec
sql/: .dbm  001-create-table.sql
src/: Config.hs.example  Main.hs
